# pytest-container-structure-test

./: .pre-commit-config.yaml  README.md  container-structure-test.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  main.yaml
src/pytest_container_structure_test/: plugin.py
tests/: plugin_test.py  scripts_test.py
